--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ exclude = ["tests*"]
 
 [project]
 name = "verifia"
-version = "0.1.0rc0"
+version = "0.1.1"
 description = "VerifIA is an open-source AI testing framework for domain‑aware verification of AI models during the staging phase—before deployment."
 readme = "README.md"
 requires-python = ">=3.7,<4.0"
